--- a/public/500.html
+++ b/public/500.html
@@ -12,7 +12,7 @@
 <body>
   <div class="error-wrapper">
     <div class="error-icon-container">
-      <img src="/assets/server-icon.svg" alt="Page Not Found" class="error-icon-background">
+      <img src="/assets/cloud-disconnect.svg" alt="Page Not Found" class="error-icon-background">
     </div>
     <div class="error-content">
       <div class="error-title">500</div>
