--- a/public/500.html
+++ b/public/500.html
@@ -6,13 +6,263 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=B612+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Unbounded:wght@200..900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/assets/application.css">
+  <style>
+    :root {
+    --Gray: #363636;
+    --White: #FFFFFF;
+    --Electro-Red: #F42053;
+    --Electro-Blue: #30C2F6;
+    --Electro-Forest-Green: #0DAE5E;
+    --Electro-Pink: #C225E0;
+    --Electro-Yellow: #F0AA05;
+    --Electro-Purple: #6027FF;
+    }
+
+    html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
+    box-sizing: border-box;
+    color: var(--White, #FFF);
+  }
+
+  body {
+    display: flex;
+    padding: 12px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    position: relative;
+    overflow: auto;
+    background: none;
+  }
+
+  body::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: var(--Black-Gradient, linear-gradient(180deg, #000 0%, #121212 100%));
+    z-index: -1;
+  }
+
+    .error-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 520px;
+    height: 100%;
+    gap: 14px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      min-height: 100vh;
+      box-sizing: border-box;
+      color: var(--White, #FFF);
+    }
+
+    body {
+      display: flex;
+      padding: 12px;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      position: relative;
+      overflow: auto;
+      background: none;
+    }
+
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: var(--Black-Gradient, linear-gradient(180deg, #000 0%, #121212 100%));
+      z-index: -1;
+    }
+
+    .error-wrapper {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+      max-width: 520px;
+      height: 100%;
+      gap: 14px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+
+    .error-icon-container {
+      width: 200px;
+      height: 200px;
+      position: relative;
+      color: var(--Electro-Red);
+      animation: colorCycle 24s linear infinite alternate;
+    }
+
+    @keyframes colorCycle {
+      0% {
+        color: var(--Electro-Red);
+      }
+      20% {
+        color: var(--Electro-Blue);
+      }
+      40% {
+        color: var(--Electro-Forest-Green);
+      }
+      60% {
+        color: var(--Electro-Pink);
+      }
+      80% {
+        color: var(--Electro-Yellow);
+      }
+      100% {
+        color: var(--Electro-Purple);
+      }
+    }
+
+    @keyframes bounce {
+      0%, 100% {
+        transform: translateY(0);
+      }
+      50% {
+        transform: translateY(-10px);
+      }
+    }
+
+    @keyframes fade {
+      0% {
+        opacity: 1;
+      }
+      100% {
+        opacity: 0;
+      }
+    }
+
+    .error-icon-background {
+      width: 100%;
+      height: 100%;
+      fill: currentColor;
+      animation: bounce 2s ease-in-out infinite, fade 2s ease-in-out infinite alternate;
+    }
+
+  .error-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 300px;
+    gap: 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    text-align: center;
+  }
+
+  .error-title {
+    font-size: 4rem;
+    font-family: Unbounded;
+    font-weight: 700;
+    letter-spacing: 0.3px;
+  }
+
+  .error-title-message {
+    font-size: 1.25rem;
+    font-family: Unbounded;
+    font-weight: 500;
+    letter-spacing: 0.3px;
+    margin: 0;
+  }
+
+  .error-message {
+    text-align: center;
+    font-family: B612 Mono;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px;
+    margin: 0;
+    width: 200px;
+  }
+
+  .error-button {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 20px;
+    background: var(--Electro-Forest-Green);
+    color: white;
+    font-size: 1rem;
+    font-family: 'Inter', sans-serif;
+    text-decoration: none;
+    border-radius: 6px;
+    border: 1px solid var(--Gray);
+    transition: background 0.3s ease, border 0.3s ease-out;
+  }
+
+  .error-button:hover {
+    border: 1px solid var(--Electro-Forest-Green, #0DAE5E); 
+    background: rgba(13, 174, 94, 0.8);
+    outline: 2px solid rgba(13, 174, 94, 0.5); 
+    outline-offset: 2px;
+  }
+
+  @media (max-width: 600px) {
+    .error-wrapper {
+      flex-direction: column;
+      justify-content: center;
+      gap: 20px;
+      box-sizing: border-box;
+    }
+
+    .error-content {
+      width: 300px;
+    }
+
+    .error-icon-container {
+      width: 80px;
+      height: 80px;
+    }
+
+    .error-title {
+      font-size: 3rem;
+    }
+
+    .error-message {
+      font-size: 0.75rem;
+    }
+  }
+  </style>
 </head>
 
 <body>
   <div class="error-wrapper">
     <div class="error-icon-container">
-      <img src="/assets/cloud-disconnect.svg" alt="Page Not Found" class="error-icon-background">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 24 24"
+        class="error-icon-background"
+        width="200px"
+        height="200px"
+      >
+        <path d="M23.9388 15.5305C23.8976 13.572 22.5715 11.6399 20.2399 11.1301C20.6366 8.19441 18.6352 5.55606 16.1475 4.55683C14.7192 3.98314 13.0591 3.90634 11.4894 4.61884C10.6948 4.97952 9.95397 5.5283 9.29326 6.27428L10.7109 7.69191C11.2284 7.08364 11.7783 6.68412 12.3161 6.44C13.3264 5.98139 14.4137 6.01573 15.402 6.41272C17.4546 7.23718 18.7918 9.45194 18.0981 11.5493C17.8631 12.2598 18.3877 12.9816 19.1179 13.0017C20.991 13.0535 21.9134 14.3471 21.9392 15.5725C21.9522 16.1921 21.7361 16.7819 21.299 17.2166C21.1358 17.379 20.9304 17.5309 20.6759 17.6569L22.1332 19.1142C22.3412 18.9699 22.5336 18.8096 22.7096 18.6345C23.5704 17.7781 23.9622 16.6436 23.9388 15.5305Z" fill="currentColor"/>
+        <path d="M17.0547 20.0001L6.00002 20.0001C2.02368 20.0001 -0.0242121 16.4791 0.251925 13.4333C0.393448 11.8722 1.13583 10.3318 2.59153 9.33665C3.36385 8.80868 4.29719 8.46091 5.38235 8.32777L7.38131 10.3267C5.67248 10.1222 4.49222 10.46 3.72022 10.9877C2.82799 11.5977 2.33964 12.5562 2.24376 13.6138C2.04508 15.8053 3.49567 18.0001 6.00002 18.0001L15.0547 18.0001L17.0547 20.0001Z" fill="currentColor"/>
+        <path d="M2.0079 3.4221C1.61738 3.03158 1.61738 2.39841 2.0079 2.00789C2.39843 1.61737 3.03159 1.61737 3.42212 2.00789L22.0004 20.5862C22.391 20.9767 22.391 21.6099 22.0004 22.0004C21.6099 22.391 20.9768 22.391 20.5862 22.0004L2.0079 3.4221Z" fill="currentColor"/>
+      </svg>
     </div>
     <div class="error-content">
       <div class="error-title">500</div>
