--- a/public/406-unsupported-browser.html
+++ b/public/406-unsupported-browser.html
@@ -6,13 +6,279 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=B612+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Unbounded:wght@200..900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/assets/application.css">
+  <style>
+    :root {
+    --Gray: #363636;
+    --White: #FFFFFF;
+    --Electro-Red: #F42053;
+    --Electro-Blue: #30C2F6;
+    --Electro-Forest-Green: #0DAE5E;
+    --Electro-Pink: #C225E0;
+    --Electro-Yellow: #F0AA05;
+    --Electro-Purple: #6027FF;
+    }
+
+    html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
+    box-sizing: border-box;
+    color: var(--White, #FFF);
+  }
+
+  body {
+    display: flex;
+    padding: 12px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    position: relative;
+    overflow: auto;
+    background: none;
+  }
+
+  body::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: var(--Black-Gradient, linear-gradient(180deg, #000 0%, #121212 100%));
+    z-index: -1;
+  }
+
+    .error-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 520px;
+    height: 100%;
+    gap: 14px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      min-height: 100vh;
+      box-sizing: border-box;
+      color: var(--White, #FFF);
+    }
+
+    body {
+      display: flex;
+      padding: 12px;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      position: relative;
+      overflow: auto;
+      background: none;
+    }
+
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: var(--Black-Gradient, linear-gradient(180deg, #000 0%, #121212 100%));
+      z-index: -1;
+    }
+
+    .error-wrapper {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+      max-width: 520px;
+      height: 100%;
+      gap: 14px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+
+    .error-icon-container {
+      width: 200px;
+      height: 200px;
+      position: relative;
+      color: var(--Electro-Red);
+      animation: colorCycle 24s linear infinite alternate;
+    }
+
+    @keyframes colorCycle {
+      0% {
+        color: var(--Electro-Red);
+      }
+      20% {
+        color: var(--Electro-Blue);
+      }
+      40% {
+        color: var(--Electro-Forest-Green);
+      }
+      60% {
+        color: var(--Electro-Pink);
+      }
+      80% {
+        color: var(--Electro-Yellow);
+      }
+      100% {
+        color: var(--Electro-Purple);
+      }
+    }
+
+    @keyframes bounce {
+      0%, 100% {
+        transform: translateY(0);
+      }
+      50% {
+        transform: translateY(-10px);
+      }
+    }
+
+    @keyframes fade {
+      0% {
+        opacity: 1;
+      }
+      100% {
+        opacity: 0;
+      }
+    }
+
+    .error-icon-background {
+      width: 100%;
+      height: 100%;
+      fill: currentColor;
+      animation: bounce 2s ease-in-out infinite;
+    }
+
+  .error-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 300px;
+    gap: 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    text-align: center;
+  }
+
+  .error-title {
+    font-size: 4rem;
+    font-family: Unbounded;
+    font-weight: 700;
+    letter-spacing: 0.3px;
+  }
+
+  .error-title-message {
+    font-size: 1.25rem;
+    font-family: Unbounded;
+    font-weight: 500;
+    letter-spacing: 0.3px;
+    margin: 0;
+  }
+
+  .error-message {
+    text-align: center;
+    font-family: B612 Mono;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px;
+    margin: 0;
+    width: 200px;
+  }
+
+  .error-button {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 20px;
+    background: var(--Electro-Forest-Green);
+    color: white;
+    font-size: 1rem;
+    font-family: 'Inter', sans-serif;
+    text-decoration: none;
+    border-radius: 6px;
+    border: 1px solid var(--Gray);
+    transition: background 0.3s ease, border 0.3s ease-out;
+  }
+
+  .error-button:hover {
+    border: 1px solid var(--Electro-Forest-Green, #0DAE5E); 
+    background: rgba(13, 174, 94, 0.8);
+    outline: 2px solid rgba(13, 174, 94, 0.5); 
+    outline-offset: 2px;
+  }
+
+  @media (max-width: 600px) {
+    .error-wrapper {
+      flex-direction: column;
+      justify-content: center;
+      gap: 20px;
+      box-sizing: border-box;
+    }
+
+    .error-content {
+      width: 300px;
+    }
+
+    .error-icon-container {
+      width: 80px;
+      height: 80px;
+    }
+
+    .error-title {
+      font-size: 3rem;
+    }
+
+    .error-message {
+      font-size: 0.75rem;
+    }
+  }
+  </style>
 </head>
 <body>
   <div class="error-wrapper">
     <div class="error-icon-container">
-      <img src="/assets/folder-remove.svg" alt="Page Not Found" class="error-icon-background">
-    </div>
+      <svg
+        width="200px"
+        height="200px"
+        viewBox="0 0 24 24"
+        class="error-icon-background"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M8 14C7.44771 14 7 14.4477 7 15C7 15.5523 7.44771 16 8 16H15.9991C16.5514 16 17 15.5523 17 15C17 14.4477 16.5523 14 16 14H8Z"
+          fill="currentColor"
+        />
+        <path
+          d="M10.7041 7.2924C10.3141 6.90253 9.68178 6.90253 9.29176 7.2924L8.49735 8.0865L7.70797 7.29743C7.31795 6.90756 6.68561 6.90756 6.29559 7.29743C5.90557 7.6873 5.90556 8.3194 6.29558 8.70926L7.08496 9.49833L6.29251 10.2905C5.9025 10.6803 5.90249 11.3124 6.29251 11.7023C6.68254 12.0922 7.31488 12.0922 7.7049 11.7023L8.49735 10.9102L9.2951 11.7076C9.68512 12.0975 10.3175 12.0975 10.7075 11.7076C11.0975 11.3177 11.0975 10.6856 10.7075 10.2958L9.90974 9.49833L10.7041 8.70424C11.0942 8.31437 11.0942 7.68227 10.7041 7.2924Z"
+          fill="currentColor"
+        />
+        <path
+          d="M16.2918 7.2924C16.6818 6.90253 17.3141 6.90253 17.7041 7.2924C18.0942 7.68227 18.0942 8.31437 17.7041 8.70424L16.9097 9.49833L17.7075 10.2958C18.0975 10.6856 18.0975 11.3177 17.7075 11.7076C17.3175 12.0975 16.6851 12.0975 16.2951 11.7076L15.4974 10.9102L14.7049 11.7023C14.3149 12.0922 13.6825 12.0922 13.2925 11.7023C12.9025 11.3124 12.9025 10.6803 13.2925 10.2905L14.085 9.49833L13.2956 8.70926C12.9056 8.3194 12.9056 7.6873 13.2956 7.29743C13.6856 6.90756 14.318 6.90756 14.708 7.29743L15.4974 8.0865L16.2918 7.2924Z"
+          fill="currentColor"
+        />
+        <path
+          fill-rule="evenodd"
+          clip-rule="evenodd"
+          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM12 20.9932C7.03321 20.9932 3.00683 16.9668 3.00683 12C3.00683 7.03321 7.03321 3.00683 12 3.00683C16.9668 3.00683 20.9932 7.03321 20.9932 12C20.9932 16.9668 16.9668 20.9932 12 20.9932Z"
+          fill="currentColor"
+        />
+      </svg>
+    </div>    
     <div class="error-content">
       <div class="error-title">406</div>
       <p class="error-title-message">
